codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview_actions__progress_tests__archive_progress.snap
---
source: tui/src/app/agents_overview_action_progress_tests.rs
assertion_line: 62
expression: terminal.backend()
---
"Archiving task…                     "
"Please wait. Task switching is      "
"unavailable until this finishes.    "
